k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional higher level configuration
    kubernetes.io/ingress.class: nginx # ingress controller based on nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # remove the api part of the request to the server
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
# our rules are saying that there are 2 paths that we can route traffic to
# if anything comes to the route '/' we want to send that request to whatever set of pods
# are governed by the service with name 'client...'
